# UniLanguage

./: .gitignore  README.md
Compiler/: CMakeLists.txt  main.cpp
Compiler/Files/FiniteAutomata/: FA.in  FA_identifiers.in  FA_integers.in
Compiler/Files/Grammar/: g1.txt  g2.txt
Compiler/Files/LanguageSpecification/: tokens.in
Compiler/Files/Output/: PIF.out  ST.out
Compiler/Files/Parser/: parsing_table.txt
Compiler/Files/Programs/: p1.txt  p2.txt  p3.txt  p_err1.txt
Compiler/FiniteAutomata/: FiniteAutomata.cpp  FiniteAutomata.h
Compiler/FiniteAutomata/Transition/: Transition.cpp  Transition.h
Compiler/FiniteAutomata/Utils/: UtilFunctions.cpp  UtilFunctions.h
Compiler/Grammar/: Grammar.cpp  Grammar.h
Compiler/Grammar/Production/: Production.cpp  Production.h
Compiler/Parser/: ParserTree.h  RecursiveParser.cpp  RecursiveParser.h
Compiler/Parser/LanguageSymbol/: LanguageSymbol.cpp  LanguageSymbol.h  ParserLanguageSymbol.cpp  ParserLanguageSymbol.h
Compiler/Parser/LanguageSymbol/NonTerminalSymbol/: NonTerminalSymbol.cpp  NonTerminalSymbol.h
Compiler/Parser/LanguageSymbol/TerminalSymbol/: TerminalSymbol.cpp  TerminalSymbol.h
Compiler/Parser/ParserOutput/: ParserOutput.cpp  ParserOutput.h
Compiler/ProgramInternalForm/: ProgramInternalForm.cpp  ProgramInternalForm.h
Compiler/Scanner/: Scanner.cpp  Scanner.h
Compiler/SymbolTable/: SymbolTable.cpp  SymbolTable.h
Compiler/SymbolTable/RedBlackTree/: Node.h  RedBlackTree.cpp  RedBlackTree.h  rbt_testing.cpp  rbt_testing.h
Compiler/SymbolTable/Tests/: SymbolTableTest.cpp  SymbolTableTest.h
Compiler/Tests/FiniteAutomata/: FiniteAutomataTest.cpp  FiniteAutomataTest.h
Compiler/Tests/Grammar/: GrammarTest.cpp  GrammarTest.h
Compiler/Tests/Parser/: ParserTest.cpp  ParserTest.h
Compiler/Tests/Scanner/: ScannerTest.cpp  ScannerTest.h
Compiler/Utils/: UtilFunctions.cpp  UtilFunctions.h
LanguageSpecification/: lexic.txt  token.in
LexYacc/: g2.txt  lex.yy.c  p3.txt  p_err1.txt  parser.tab.c  parser.tab.h  parser.y  specif.lxi  specif.lxi.bak  specif_debug.lxi  y.tab.c  y.tab.h
documentation/class_diagrams/: class-diagram.mdj
language-specification/: lexic.txt  syntax.in
language_specification/: syntax.in  token.in
